Add Dockerfile for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,8 @@ pyrightconfig.json
 *.xhtml
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,web
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
